--- a/public/sass/abstracts/_variables.scss
+++ b/public/sass/abstracts/_variables.scss
@@ -1,4 +1,12 @@
 $color-primary: #29A8E0;
 $color-primary-dark: #1C76BC;
+$color-primary-darker: #0a2c46;
+
+$color-card-1: #00487C;
+$color-card-1--light: #006fc0;
+$color-card-2: #3E6680;
+$color-card-2--light: #558aad;
 
 $color-black: #222127;
+$color-white: white;
+$color-gray: gray;
