--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,11 +4,32 @@
 .u-color-primary-dark {
   color: #1C76BC !important; }
 
+.u-color-white {
+  color: white !important; }
+
+.u-color-gray {
+  color: gray !important; }
+
 .u-margin-bottom-sm {
   margin-bottom: 1.5rem !important; }
 
 .u-margin-bottom-md {
   margin-bottom: 4rem !important; }
+
+.u-margin-top-sm {
+  margin-top: 1.5rem !important; }
+
+.u-margin-top-md {
+  margin-top: 4rem !important; }
+
+.u-padding-top-sm {
+  padding-top: 1.5rem !important; }
+
+.u-padding-top-md {
+  padding-top: 4rem !important; }
+
+.u-txt-shadow {
+  text-shadow: 2px 2px 4px #222 !important; }
 
 html {
   font-size: 62.25%; }
@@ -60,15 +81,23 @@ body {
 .cta,
 .cta:link,
 .cta:visited {
+  font-family: 'jost';
   display: inline-block;
-  padding: 2rem 2rem;
+  padding: 1.5rem 4rem;
   border-radius: 40rem;
   background-color: #29A8E0;
-  width: 38rem;
   text-align: center;
-  font-size: 2.8rem;
+  font-size: 2rem;
   text-decoration: none;
-  color: white; }
+  color: white;
+  transition: all .2s;
+  border: none;
+  cursor: pointer; }
+  .cta:hover,
+  .cta:link:hover,
+  .cta:visited:hover {
+    transform: translateY(-0.4rem);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
 
 .card {
   height: 38rem;
@@ -95,31 +124,33 @@ body {
     position: absolute;
     z-index: 4;
     height: 100%;
-    width: 100%;
-    background-color: royalblue; }
+    width: 100%; }
     .card__layer1--left {
+      background-color: #00487C;
       clip-path: polygon(0 0, 48% 0, 32% 100%, 0 100%); }
     .card__layer1--right {
+      background-color: #3E6680;
       clip-path: polygon(52% 0, 100% 0, 100% 100%, 68% 100%); }
     .card__layer1-drop-shadow {
       position: absolute;
       z-index: 3;
-      background-color: rgba(65, 105, 225, 0.5);
       filter: blur(5px);
       width: 100%;
       height: 100%; }
       .card__layer1-drop-shadow--left {
         left: .8rem;
+        background-color: rgba(0, 72, 124, 0.5);
         clip-path: polygon(0 0, 48% 0, 32% 100%, 0 100%); }
       .card__layer1-drop-shadow--right {
         right: .8rem;
+        background-color: rgba(62, 102, 128, 0.5);
         clip-path: polygon(52% 0, 100% 0, 100% 100%, 68% 100%); }
   .card__layer2 {
     position: absolute;
     z-index: 2;
     height: 100%;
     width: 100%;
-    background-color: white; }
+    background-color: transparent; }
     .card__layer2--left {
       clip-path: polygon(0 0, 50% 0, 40% 100%, 0 100%); }
     .card__layer2--right {
@@ -130,11 +161,11 @@ body {
     width: 100%;
     background-size: cover; }
     .card__background--1 {
-      background-image: url(../img/corehacks.jpg); }
+      background-image: linear-gradient(to right bottom, rgba(0, 111, 192, 0.8), rgba(0, 72, 124, 0.5)), url(../img/corehacks.jpg); }
     .card__background--2 {
-      background-color: limegreen; }
+      background-image: linear-gradient(to left bottom, rgba(85, 138, 173, 0.8), rgba(62, 102, 128, 0.5)), url(../img/corelore.jpg); }
     .card__background--3 {
-      background-color: orangered; }
+      background-image: linear-gradient(to left bottom, rgba(85, 138, 173, 0.8), rgba(62, 102, 128, 0.5)), url(../img/corebq.jpg); }
 
 .card-sm-container {
   display: flex;
@@ -165,6 +196,34 @@ body {
     height: 100%;
     width: 100%;
     clip-path: polygon(0 0, 65% 0, 50% 100%, 0 100%); }
+
+.embedded-video {
+  width: 56rem;
+  height: 31.5rem;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.5); }
+
+.footer {
+  background-color: #444;
+  height: 30rem;
+  display: flex;
+  align-items: center; }
+  .footer__logo-box {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    border-right: solid #666 1px; }
+  .footer__link, .footer__link:link, .footer__link:visited {
+    font-size: 1.8rem;
+    text-decoration: none;
+    color: white; }
+    .footer__link:not(:last-child), .footer__link:link:not(:last-child), .footer__link:visited:not(:last-child) {
+      padding-right: .8rem; }
+  .footer__content {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; }
 
 .header {
   position: relative;
@@ -264,7 +323,22 @@ body {
     transform: scale(0.95); }
 
 .section-traditions {
-  padding: 10rem 10rem 0 10rem;
+  padding: 5rem 10rem 10rem 10rem;
   text-align: center;
-  background-color: white;
+  background-image: linear-gradient(to bottom, rgba(28, 118, 188, 0.8), rgba(10, 44, 70, 0.5)), url("../img/1262.jpg");
   background-repeat: repeat; }
+
+.section-traditions-sub {
+  margin-top: -5rem;
+  text-align: center;
+  background-color: white; }
+
+.final-cta {
+  color: white;
+  height: 100vh;
+  background-color: #0a2c46;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .final-cta > div {
+    margin: 1rem; }
