--- a/public/sass/components/_buttons.scss
+++ b/public/sass/components/_buttons.scss
@@ -1,13 +1,22 @@
 .cta,
 .cta:link,
 .cta:visited {
+	font-family: 'jost';
 	display: inline-block;
-	padding: 2rem 2rem;
+	padding: 1.5rem 4rem;
 	border-radius: 40rem;
 	background-color: $color-primary;
-	width: 38rem;
 	text-align: center;
-	font-size: 2.8rem;
+	font-size: 2rem;
 	text-decoration: none;
-	color: white;
+	color: $color-white;
+	transition: all .2s;
+
+	border:none;
+	cursor: pointer;
+
+	&:hover {
+		transform: translateY(-.4rem);
+		box-shadow: 0 1rem 2rem rgba(black, 0.2);
+	}
 }
