--- a/public/sass/components/_card.scss
+++ b/public/sass/components/_card.scss
@@ -4,7 +4,7 @@
 	margin: 3rem 0;
 	overflow: hidden;
 	border-radius: .4rem;
-	color: white;
+	color: $color-white;
 	
 	&__text {
 		position: absolute;
@@ -31,27 +31,30 @@
 		z-index: 4;
 		height: 100%;
 		width: 100%;
-		background-color: royalblue;
+
 		&--left {
+			background-color: $color-card-1;
 			clip-path: polygon(0 0, 48% 0, 32% 100%, 0 100%);
 		}
 		&--right {
+			background-color: $color-card-2;
 			clip-path: polygon(52% 0, 100% 0, 100% 100%, 68% 100%);
 		}
 	  
 	  &-drop-shadow {
 		position: absolute;
 		z-index: 3;
-		background-color: rgba(royalblue, 0.5);
 		filter: blur(5px);
 		width: 100%;
 		height: 100%;
 		&--left {
 			left: .8rem;
+			background-color: rgba($color-card-1, 0.5);
 			clip-path: polygon(0 0, 48% 0, 32% 100%, 0 100%);
 		}
 		&--right {
 			right: .8rem;
+			background-color: rgba($color-card-2, 0.5);
 			clip-path: polygon(52% 0, 100% 0, 100% 100%, 68% 100%);
 		}
 	  }
@@ -62,7 +65,7 @@
 		z-index: 2;
 		height: 100%;
 		width: 100%;
-		background-color: white;
+		background-color: transparent;
 		&--left {
 			clip-path: polygon(0 0, 50% 0, 40% 100%, 0 100%);
 		}
@@ -78,13 +81,13 @@
 		width: 100%;
 		background-size: cover;
 		&--1 {
-			background-image: url(../img/corehacks.jpg);
+			background-image: linear-gradient(to right bottom, rgba($color-card-1--light, .8), rgba($color-card-1, .5)), url(../img/corehacks.jpg);
 		}
 		&--2 {
-			background-color: limegreen;
+			background-image: linear-gradient(to left bottom, rgba($color-card-2--light, .8), rgba($color-card-2, .5)), url(../img/corelore.jpg);
 		}
 		&--3 {
-			background-color: orangered;
+			background-image: linear-gradient(to left bottom, rgba($color-card-2--light, .8), rgba($color-card-2, .5)), url(../img/corebq.jpg);
 		}
 	}
 }
@@ -103,7 +106,7 @@
 }
 
 .card-sm {
-	background-color: white;
+	background-color: $color-white;
 	height: 14rem;
 	width: 45%;
 	position: relative;
