--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -7,7 +7,9 @@
 
 @import "components/buttons";
 @import "components/card";
+@import "components/embedded-video";
 
+@import "layouts/footer";
 @import "layouts/header";
 @import "layouts/nav";
 
