--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,6 +1,6 @@
 <% include partials/header %>
 <header class="header">
-	<div class="header__background">&nbsp;</div>
+	<div class="header__background"></div>
 	<div class="header__headings">
 		<h1 class="heading1 heading1--primary">we are</h1>
 		<h1 class="heading1 heading1--secondary">the future.</h1>
@@ -38,68 +38,76 @@
 	
 	</div>
 </section>
-
 <section class="section-traditions">
 	<h2 class="heading2">our events & traditions</h2>
 	<div class="card">
-		<div class="card__text card__text--left">
-			<h2 class="heading3">Heading 2</h2>
-			<p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. A molestias nemo asperiores quas, magni voluptatum, quisquam corporis culpa quam accusamus voluptates aut! Similique ab corrupti dignissimos cupiditate velit ipsam consequatur?</p>
-		</div>
-		<div class="card__layer1 card__layer1--left">&nbsp;</div>
-		<div class="card__layer1-drop-shadow card__layer1-drop-shadow--left">&nbsp;</div>
-		<div class="card__layer2 card__layer2--left">&nbsp;</div>	
-		<div class="card__background card__background--1">&nbsp;</div>
-	</div>
-	<h3 class="heading4">History Point #1</h3>
-	<div class="card">
 		<div class="card__text card__text--right">
-			<h2 class="heading3">Heading 2</h2>
+			<h3 class="heading3">CoRE Lore</h2>
+			<h4 class="heading4 u-color-gray">March</h4>
 			<p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ipsam autem, architecto possimus deleniti dolorem facilis laboriosam sit. Magnam accusantium harum sunt quisquam odit. Soluta tempora sint similique maiores iste.</p>
 		</div>
-		<div class="card__layer1 card__layer1--right">&nbsp;</div>
-		<div class="card__layer1-drop-shadow card__layer1-drop-shadow--right">&nbsp;</div>
-		<div class="card__layer2 card__layer2--right">&nbsp;</div>	
-		<div class="card__background card__background--2">&nbsp;</div>
+		<div class="card__background card__background--2"></div>
+		<div class="card__layer1 card__layer1--right"></div>
+		<div class="card__layer1-drop-shadow card__layer1-drop-shadow--right"></div>
+		<div class="card__layer2 card__layer2--right"></div>	
+	</div>
+	<h3 class="heading4">CoRE was founded in ----, making us the oldest living-learning community in BU!</h3>
+	<div class="card">
+		<div class="card__text card__text--left">
+			<h3 class="heading3">CoRE Hacks</h2>
+			<h4 class="heading4 u-color-gray">March</h4>
+			<p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. A molestias nemo asperiores quas, magni voluptatum, quisquam corporis culpa quam accusamus voluptates aut! Similique ab corrupti dignissimos cupiditate velit ipsam consequatur?</p>
+		</div>
+		<div class="card__background card__background--1"></div>
+		<div class="card__layer1 card__layer1--left"></div>
+		<div class="card__layer1-drop-shadow card__layer1-drop-shadow--left"></div>
+		<div class="card__layer2 card__layer2--left"></div>	
 	</div>
 	<h3 class="heading4">History Point #2</h3>
 	<div class="card">
-		<div class="card__text card__text--left">
-			<h2 class="heading3">Heading 2</h2>
+		<div class="card__text card__text--right">
+			<h3 class="heading3">CoreBQ</h2>
+			<h4 class="heading4 u-color-gray">March</h4>
 			<p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. A molestias nemo asperiores quas, magni voluptatum, quisquam corporis culpa quam accusamus voluptates aut! Similique ab corrupti dignissimos cupiditate velit ipsam consequatur?</p>
 		</div>
-		<div class="card__layer1 card__layer1--left">&nbsp;</div>
-		<div class="card__layer1-drop-shadow card__layer1-drop-shadow--left">&nbsp;</div>
-		<div class="card__layer2 card__layer2--left">&nbsp;</div>	
-		<div class="card__background card__background--3">&nbsp;</div>
+		<div class="card__background card__background--3"></div>
+		<div class="card__layer1 card__layer1--right"></div>
+		<div class="card__layer1-drop-shadow card__layer1-drop-shadow--right"></div>
+		<div class="card__layer2 card__layer2--right"></div>	
 	</div>
-	<h3 class="heading3">...and a few more!</h3>
+</section>
+<section class="section-traditions-sub">
+	<h3 class="heading3 u-padding-top-md">...and a few more!</h4>
 	<div class="card-sm-container">
 		<div class="card-sm">
 			<div class="card-sm__text">
-				<h4 class="heading4">Heading 4</h4>
-				<p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+				<h4 class="heading4">Escape the Room</h4>
+				<h4 class="heading4 u-color-gray">October 28st</h4>
+				<p class="paragraph">The gang builds an Escape the Room. It goes horribly wrong.</p>
 			</div>
 			<div class="card-sm__background card-sm__background--1"></div>
 		</div>
 		<div class="card-sm">
 			<div class="card-sm__text">
-				<h4 class="heading4">Heading 4</h4>
+				<h4 class="heading4">Python Workshops</h4>
+				<h4 class="heading4 u-color-gray">October 12th, February 12th</h4>
 				<p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 			</div>
 			<div class="card-sm__background card-sm__background--2"></div>
 		</div>
 		<div class="card-sm">
 			<div class="card-sm__text">
-				<h4 class="heading4">Heading 4</h4>
+				<h4 class="heading4">Thing here</h4>
+				<h4 class="heading4 u-color-gray">Date bois</h4>
 				<p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
 			</div>
 			<div class="card-sm__background card-sm__background--3"></div>
 		</div>			
 		<div class="card-sm">
 			<div class="card-sm__text">
-				<h4 class="heading4">Heading 4</h4>
-				<p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+				<h4 class="heading4">Midnight Denny's Runs</h4>
+				<h4 class="heading4 u-color-gray">Whenever we want</h4>
+				<p class="paragraph">Yup.</p>
 			</div>
 			<div class="card-sm__background card-sm__background--4"></div>
 		</div>
@@ -107,9 +115,15 @@
 </section>
 
 <section class="final-cta">
-	
+	<div class="final-cta__cta">
+		<h2 class="heading2">What our residents have to say...</h2>		
+		<p class="paragraph u-margin-bottom-md">We asked our residents what they thought about CoRE, totally adlibbed.</p>
+		<button class="cta">Apply for 2019-2020</button>
+	</div>
+	<div class="final-cta__video-container">
+		<iframe class="embedded-video" src="https://www.youtube-nocookie.com/embed/QH2-TGUlwu4?modestbranding=1&rel=0&disablekb=1" frameborder="0"></iframe>
+	</div>
 </section>
-
 </main>
 
 <% include partials/footer %>
