--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -115,13 +115,19 @@
 </section>
 
 <section class="final-cta">
-	<div class="final-cta__cta">
-		<h2 class="heading2">What our residents have to say...</h2>		
-		<p class="paragraph u-margin-bottom-md">We asked our residents what they thought about CoRE, totally adlibbed.</p>
-		<button class="cta">Apply for 2019-2020</button>
+	<div class="final-cta-container">
+		<div class="final-cta__cta">
+			<h2 class="heading2">What our residents have to say...</h2>
+			<p class="paragraph u-margin-bottom-md">We asked our residents what they thought about CoRE, totally adlibbed.</p>
+			<button class="cta">Apply for 2019-2020</button>
+		</div>
+		<div class="final-cta__video-container">
+			<iframe class="embedded-video" src="https://www.youtube-nocookie.com/embed/QH2-TGUlwu4?modestbranding=1&rel=0&disablekb=1" frameborder="0"></iframe>
+		</div>
 	</div>
-	<div class="final-cta__video-container">
-		<iframe class="embedded-video" src="https://www.youtube-nocookie.com/embed/QH2-TGUlwu4?modestbranding=1&rel=0&disablekb=1" frameborder="0"></iframe>
+	<div class="final-cta-text">
+		<h3 class="heading3 u-color-white">We're not done yet!</h3>
+		<p class="paragraph u-color-white">Our new website is still under construction. Stay tuned for more!</p>
 	</div>
 </section>
 </main>
