--- a/public/sass/abstracts/_utilities.scss
+++ b/public/sass/abstracts/_utilities.scss
@@ -1,15 +1,22 @@
 .u-color-primary { color: $color-primary !important; }
 .u-color-primary-dark { color: $color-primary-dark !important; }
-.u-color-white { color: $color-white !important;}
-.u-color-gray { color: $color-gray !important;}
+.u-color-white { color: $color-white !important; }
+.u-color-gray { color: $color-gray !important; }
 
-.u-margin-bottom-sm { margin-bottom: 1.5rem !important;}
-.u-margin-bottom-md { margin-bottom: 4rem !important;}
+.u-margin-bottom-sm { margin-bottom: 1.5rem !important; }
+.u-margin-bottom-md { margin-bottom: 4rem !important; }
+.u-margin-bottom-lg { margin-bottom: 6rem !important; }
 
-.u-margin-top-sm { margin-top: 1.5rem !important;}
-.u-margin-top-md { margin-top: 4rem !important;}
+.u-margin-top-sm { margin-top: 1.5rem !important; }
+.u-margin-top-md { margin-top: 4rem !important; }
+.u-margin-top-lg { margin-top: 6rem !important; }
 
-.u-padding-top-sm { padding-top: 1.5rem !important;}
-.u-padding-top-md { padding-top: 4rem !important;}
+.u-padding-top-sm { padding-top: 1.5rem !important; }
+.u-padding-top-md { padding-top: 4rem !important; }
+.u-padding-top-lg { padding-top: 6rem !important; }
+
+.u-padding-bottom-sm { padding-bottom: 1.5rem !important; }
+.u-padding-bottom-md { padding-bottom: 4rem !important; }
+.u-padding-bottom-lg { padding-bottom: 6rem !important; }
 
 .u-txt-shadow { text-shadow: 2px 2px 4px #222 !important; }
