Added contacts modal and more images

--- a/public/sass/abstracts/_utilities.scss
+++ b/public/sass/abstracts/_utilities.scss
@@ -2,6 +2,7 @@
 .u-color-primary-dark { color: $color-primary-dark !important; }
 .u-color-white { color: $color-white !important; }
 .u-color-gray { color: $color-gray !important; }
+.u-color-gray-dark { color: $color-gray-dark !important; }
 
 .u-margin-bottom-sm { margin-bottom: 1.5rem !important; }
 .u-margin-bottom-md { margin-bottom: 4rem !important; }
