--- a/public/sass/abstracts/_variables.scss
+++ b/public/sass/abstracts/_variables.scss
@@ -9,4 +9,5 @@ $color-card-2--light: #558aad;
 
 $color-black: #222127;
 $color-white: white;
-$color-gray: gray;
+$color-gray: #ddd;
+$color-gray-dark: gray;
