--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,7 +6,7 @@
 				<ul class="footer__links">
 					<a href="#" class="footer__link">gallery</a>
 					<a href="#" class="footer__link">diaries</a>
-					<a href="#" class="footer__link">contact</a>
+					<a href="#" class="footer__link" onclick="turnOnModal(event, 'contacts')">contact</a>
 					<a href="#" class="footer__link">apply</a>
 				</ul>
 				<p class="footer__copyright">
