--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,6 +8,9 @@
   color: white !important; }
 
 .u-color-gray {
+  color: #ddd !important; }
+
+.u-color-gray-dark {
   color: gray !important; }
 
 .u-margin-bottom-sm {
@@ -72,29 +75,28 @@ body {
   color: #222127; }
 
 .heading1 {
-  font-size: 4rem;
+  font-size: 4em;
   font-weight: 400;
   text-transform: uppercase;
-  letter-spacing: 4.5rem;
-  color: #ddd; }
+  letter-spacing: 4.5rem; }
   .heading1--secondary {
     color: #29A8E0; }
 
 .heading2 {
-  font-size: 3.4rem;
+  font-size: 3.4em;
   font-weight: 400;
   letter-spacing: 4px; }
 
 .heading3 {
-  font-size: 2.2rem;
+  font-size: 2.2em;
   font-weight: 400; }
 
 .heading4 {
-  font-size: 1.7rem;
+  font-size: 1.7em;
   font-weight: 400; }
 
 .paragraph {
-  font-size: 1.6rem; }
+  font-size: 1.6em; }
 
 .cta,
 .cta:link,
@@ -179,7 +181,8 @@ body {
     width: 100%;
     background-size: cover; }
     .card__background--1 {
-      background-image: linear-gradient(to right bottom, rgba(0, 111, 192, 0.8), rgba(0, 72, 124, 0.5)), url(../img/corehacks.jpg); }
+      background-image: linear-gradient(to right bottom, rgba(0, 111, 192, 0.8), rgba(0, 72, 124, 0.5)), url(../img/corehacks.jpg);
+      background-position: translateY(); }
     .card__background--2 {
       background-image: linear-gradient(to left bottom, rgba(85, 138, 173, 0.8), rgba(62, 102, 128, 0.5)), url(../img/corelore.jpg); }
     .card__background--3 {
@@ -189,7 +192,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  padding: 4rem; }
+  padding: 2rem 4rem 4rem 4rem; }
   .card-sm-container > .card-sm {
     flex-basis: calc(50% - 4rem);
     margin: 2rem; }
@@ -208,12 +211,86 @@ body {
     flex-direction: column;
     width: 35%;
     height: 100%;
-    right: 6px; }
+    right: .6rem; }
   .card-sm__background {
-    background-color: limegreen;
     height: 100%;
     width: 100%;
-    clip-path: polygon(0 0, 65% 0, 50% 100%, 0 100%); }
+    clip-path: polygon(0 0, 65% 0, 50% 100%, 0 100%);
+    background-size: cover; }
+    .card-sm__background--1 {
+      background-image: url(../img/escapetheroom.jpg);
+      background-position-x: -6rem;
+      background-position-y: -10rem; }
+    .card-sm__background--2 {
+      background-image: url(../img/secretsnowflake.jpg);
+      background-position-x: -6rem;
+      background-position-y: -25rem; }
+    .card-sm__background--3 {
+      background-image: url(../img/2amdennys.jpg);
+      background-position-y: -18rem; }
+    .card-sm__background--4 {
+      background-image: url(../img/seniorsendoff.jpg);
+      background-position-x: -6rem;
+      background-position-y: -8rem; }
+
+.modal {
+  font-size: 78%;
+  position: fixed;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(34, 33, 39, 0.5);
+  z-index: 10000;
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(1.1); }
+  .modal .modal__close {
+    width: 1.5em;
+    font-size: 3.5em;
+    text-align: center;
+    cursor: pointer; }
+
+.contacts {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 150em;
+  height: 70em;
+  background-color: white;
+  border-radius: .5em;
+  overflow-y: scroll;
+  display: flex;
+  flex-direction: column; }
+  .contacts__top-row {
+    display: flex;
+    justify-content: space-between;
+    margin: 2em 5em; }
+  .contacts__img {
+    width: 12em;
+    height: 12em;
+    border-radius: 50%;
+    margin: 2em; }
+  .contacts__items {
+    display: flex;
+    flex-direction: column; }
+  .contacts__item {
+    display: flex;
+    align-items: center; }
+    .contacts__item:not(:last-child) {
+      border-bottom: solid 1px #ddd; }
+  .contacts__links {
+    display: flex;
+    flex-direction: column; }
+  .contacts__link {
+    font-size: 2em; }
+
+.show-modal {
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1);
+  transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s; }
 
 .embedded-video {
   width: 56rem;
