--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -7,6 +7,7 @@
 
 @import "components/buttons";
 @import "components/card";
+@import "components/contacts";
 @import "components/embedded-video";
 
 @import "layouts/footer";
