--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,11 +10,11 @@
 	<body>
 
 		<nav class="nav">
-			<a href="#" class="nav__link">photo gallery</a>
-			<a href="#" class="nav__link">project diaries</a>
+			<a href="#" class="nav__link" onclick="turnOnModal(event, 'dead')">photo gallery</a>
+			<a href="#" class="nav__link" onclick="turnOnModal(event, 'dead')">project diaries</a>
 			<div class="nav__logo-box">
 				<img class="nav__logo" src="img/Logo_Circuit_Orig.svg" alt="CoRE Logo" >
 			</div>
-			<a href="#" class="nav__link">contact us</a>
+			<a href="#" class="nav__link" onclick="turnOnModal(event, 'contacts')">contact us</a>
 			<a href="#" class="nav__link nav__link--button">apply now</a>
 		</nav>
