--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -19,31 +19,40 @@
 				</div>
 			</div>
 			<div class="contacts__item">
-				<img src="" alt="Michelle Tan" class="contacts__img contacts__img--bubb">
+				<img src="../img/contact-michelle.jpg" alt="Michelle Tan" class="contacts__img contacts__img--dash">
 				<div class="contacts__info">
 					<h2 class="heading2">Michelle Tan</h2>
 					<h3 class="heading3">Vice President</h3>
-					<p class="paragraph">Links and Info</p>
+					<div class="contacts__links">
+						<a href="mailto:mtan23@binghamton.edu" class="contacts__link">mtan23@binghamton.edu</a>
+					</div>
+	
 				</div>
 			</div>
 			<div class="contacts__item">
-				<img src="" alt="Henry Burns" class="contacts__img contacts__img--boy">
+				<img src="../img/contact-henry.jpg" alt="Henry Burns" class="contacts__img contacts__img--dash">
 				<div class="contacts__info">
 					<h2 class="heading2">Henry Burns</h2>
 					<h3 class="heading3">Treasurer</h3>
-					<p class="paragraph">Links and Info</p>
+					<div class="contacts__links">
+						<a href="mailto:hburns3@binghamton.edu" class="contacts__link">hburns3@binghamton.edu</a>
+					</div>
+	
 				</div>
 			</div>
 			<div class="contacts__item">
-				<img src="" alt="Mary Mahoney" class="contacts__img contacts__img--pilw">
+				<img src="../img/contact-mary.jpg" alt="Mary Mahoney" class="contacts__img contacts__img--dash">
 				<div class="contacts__info">
 					<h2 class="heading2">Mary Mahoney</h2>
 					<h3 class="heading3">Secretary</h3>
-					<p class="paragraph">Links and Info</p>
+					<div class="contacts__links">
+						<a href="mailto:mmahon10@binghamton.edu" class="contacts__link">mmahon10@binghamton.edu</a>
+					</div>
+	
 				</div>
 			</div>
 			<div class="contacts__item">
-				<img src="../img/contact-yu.jpeg" alt="Yu Xuan Wu" class="contacts__img contacts__img--dia">
+				<img src="../img/contact-yu.jpeg" alt="Yu Xuan Wu" class="contacts__img contacts__img--dash">
 				<div class="contacts__info">
 					<h2 class="heading2">Yu Xuan Wu</h2>
 					<h3 class="heading3">Systems Administrator</h3>
@@ -53,15 +62,17 @@
 				</div>
 			</div>
 			<div class="contacts__item">
-				<img src="" alt="Nicholas Stecyna" class="contacts__img contacts__img--pick">
+				<img src="../img/contact-nick.jpg" alt="Nicholas Stecyna" class="contacts__img contacts__img--dash">
 				<div class="contacts__info">
 					<h2 class="heading2">Nicholas Stecyna</h2>
 					<h3 class="heading3">CoREtex Manager</h3>
-					<p class="paragraph">Links and Info</p>
+					<div class="contacts__links">
+						<a href="mailto:nstecyn1@binghamton.edu" class="contacts__link">nstecyn1@binghamton.edu</a>
+					</div>
 				</div>
 			</div>
 			<div class="contacts__item">
-				<img src="../img/contact-nicole.jpeg" alt="Nicole Ruiz Torres" class="contacts__img contacts__img--leaf">
+				<img src="../img/contact-nicole.jpeg" alt="Nicole Ruiz Torres" class="contacts__img contacts__img--dash">
 				<div class="contacts__info">
 					<h2 class="heading2">Nicole Ruiz Torres</h2>
 					<h3 class="heading3">Freshman Representative</h3>
@@ -81,7 +92,15 @@
 			<span class="modal__close">&larr;</span>
 		</div>
 		<div class="dead__contents">
-			<img src="../img/corevo.svg" class="dead__corevo" alt="CoREVO">
+			<img src="../img/corebot.svg" class="dead__corevo" alt="CoREVO">
+			<div class="dead__text">
+				<h2 class="heading2">Oopsie!</h2>
+				<h3 class="heading3">
+					This page isn't current available right now, sorry!
+					<br/>
+					Our website is still under heavy construction, so hang tight!
+				</h3>
+			</div>
 		</div>
 	</div>
 </div>
@@ -189,7 +208,7 @@
 				<p class="paragraph">Yup.</p>
 			</div>
 			<div class="card-sm__background card-sm__background--3"></div>
-		</div>			
+		</div>
 		<div class="card-sm">
 			<div class="card-sm__text">
 				<h4 class="heading4">Senior Sendoff</h4>
