--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,5 +16,5 @@
 				<img class="nav__logo" src="img/Logo_Circuit_Orig.svg" alt="CoRE Logo" >
 			</div>
 			<a href="#" class="nav__link" onclick="turnOnModal(event, 'contacts')">contact us</a>
-			<a href="#" class="nav__link nav__link--button">apply now</a>
+			<a href="https://docs.google.com/forms/d/e/1FAIpQLScr1rTF9wp9-j8EjUkAzefnAF8hsoaL02Rh25fzOuPl4mp7Qg/viewform?c=0&w=1" class="nav__link nav__link--button">apply now</a>
 		</nav>
