--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -107,14 +107,16 @@
 
 <header class="header">
 	<div class="header__background"></div>
-	<div class="header__headings">
-		<h1 class="heading1 heading1--primary u-color-gray">we are</h1>
-		<h1 class="heading1 heading1--secondary">the future.</h1>
-	</div>
-	<div class="header__cta-container">
-		<h4 class="heading4"><span class="u-color-primary">CO</span>MPUTERS, <span class="u-color-primary">R</span>OBOTICS, and <span class="u-color-primary">E</span>NGINEERING</h4>
-		<br/>
-		<h4 class="heading4">Binghamton University's own technology focused <br/>living-learning community.</h4>
+	<div class="header__text">
+		<div class="header__headings">
+			<h1 class="heading1 heading1--primary u-color-gray">we are</h1>
+			<h1 class="heading1 heading1--secondary">the future.</h1>
+		</div>
+		<div class="header__cta-container">
+			<h4 class="heading4"><span class="u-color-primary">CO</span>MPUTERS, <span class="u-color-primary">R</span>OBOTICS, and <span class="u-color-primary">E</span>NGINEERING</h4>
+			<br/>
+			<h4 class="heading4">Binghamton University's own technology focused <br/>living-learning community.</h4>
+		</div>
 	</div>
 </header>
 
@@ -149,32 +151,32 @@
 	<div class="card">
 		<div class="card__text card__text--right">
 			<h3 class="heading3">CoRE Lore</h2>
-			<h4 class="heading4 u-color-gray">March</h4>
-			<p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Pariatur ipsam autem, architecto possimus deleniti dolorem facilis laboriosam sit. Magnam accusantium harum sunt quisquam odit. Soluta tempora sint similique maiores iste.</p>
+			<h4 class="heading4 u-color-gray">November 21st</h4>
+			<p class="paragraph">CoRE invites all of its alumni back to campus to eat and tell stories. Students and alumni network over dinner cooked by current CoRE members, and dessert brought by alumni. Current and past members speak about their experiences on CoRE and in industry. </p>
 		</div>
 		<div class="card__background card__background--2"></div>
 		<div class="card__layer1 card__layer1--right"></div>
 		<div class="card__layer1-drop-shadow card__layer1-drop-shadow--right"></div>
 		<div class="card__layer2 card__layer2--right"></div>	
 	</div>
-	<h3 class="heading4">CoRE was founded in ----, making us the oldest living-learning community in BU!</h3>
+	<h3 class="heading4">CoRE was founded in 1991, making us the oldest living-learning community in BU!</h3>
 	<div class="card">
 		<div class="card__text card__text--left">
 			<h3 class="heading3">CoRE Hacks</h2>
-			<h4 class="heading4 u-color-gray">March</h4>
-			<p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. A molestias nemo asperiores quas, magni voluptatum, quisquam corporis culpa quam accusamus voluptates aut! Similique ab corrupti dignissimos cupiditate velit ipsam consequatur?</p>
+			<h4 class="heading4 u-color-gray">March 18th - 19th</h4>
+			<p class="paragraph">Every year, students in CoRE come up with and create their own technically inspired projects. From reimplementing the original DOOM's&reg; graphics engine, to uploading our own Snapchat&reg; filter, CoRE Hacks is an in-house event that brings our ideas to life!</p>
 		</div>
 		<div class="card__background card__background--1"></div>
 		<div class="card__layer1 card__layer1--left"></div>
 		<div class="card__layer1-drop-shadow card__layer1-drop-shadow--left"></div>
 		<div class="card__layer2 card__layer2--left"></div>	
 	</div>
-	<h3 class="heading4">History Point #2</h3>
+	<h3 class="heading4">CoRE was responsible for bringing internet to the Dickinson Community!</h3>
 	<div class="card">
 		<div class="card__text card__text--right">
 			<h3 class="heading3">CoreBQ</h2>
-			<h4 class="heading4 u-color-gray">March</h4>
-			<p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. A molestias nemo asperiores quas, magni voluptatum, quisquam corporis culpa quam accusamus voluptates aut! Similique ab corrupti dignissimos cupiditate velit ipsam consequatur?</p>
+			<h4 class="heading4 u-color-gray">May 5th</h4>
+			<p class="paragraph"> </p>
 		</div>
 		<div class="card__background card__background--3"></div>
 		<div class="card__layer1 card__layer1--right"></div>
@@ -228,7 +230,7 @@
 			<button class="cta">Apply for 2019-2020</button>
 		</div>
 		<div class="final-cta__video-container">
-			<iframe class="embedded-video" src="https://www.youtube-nocookie.com/embed/QH2-TGUlwu4?modestbranding=1&rel=0&disablekb=1" frameborder="0"></iframe>
+			<iframe id="video" src="https://www.youtube-nocookie.com/embed/M31iebeWFuY?showinfo=0&rel=0&theme=light&disablekb=1" frameborder="0"></iframe>
 		</div>
 	</div>
 	<div class="final-cta-text">
