--- a/public/css/main.css
+++ b/public/css/main.css
@@ -54,6 +54,18 @@
 
 html {
   font-size: 62.25%; }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
+  @media (max-width: 75em) {
+    html {
+      font-size: 56.25%; } }
+  @media (max-width: 56.25em) {
+    html {
+      font-size: 50%; } }
+  @media (min-width: 112.5em) {
+    html {
+      font-size: 75%; } }
 
 body {
   box-sizing: border-box; }
@@ -78,7 +90,7 @@ body {
   font-size: 4em;
   font-weight: 400;
   text-transform: uppercase;
-  letter-spacing: 4.5rem; }
+  letter-spacing: 3.5rem; }
   .heading1--secondary {
     color: #29A8E0; }
 
@@ -334,6 +346,14 @@ body {
   height: 31.5rem;
   box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.5); }
 
+#video {
+  width: 560;
+  height: 315; }
+  @media (max-width: 37.5em) {
+    #video {
+      width: 300;
+      height: 168; } }
+
 .footer {
   background-color: #444;
   height: 30rem;
@@ -376,10 +396,23 @@ body {
       width: 100%;
       height: 100%;
       background: linear-gradient(to bottom, rgba(51, 51, 51, 0.9) 5%, rgba(41, 168, 224, 0.8) 100%); }
+  @media (max-width: 37.5em) {
+    .header__text {
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center; } }
   .header__headings {
     position: absolute;
     left: 7rem;
     bottom: 7rem; }
+    @media (max-width: 37.5em) {
+      .header__headings {
+        position: relative;
+        left: 0;
+        bottom: 0;
+        text-align: center;
+        margin-bottom: 4rem; } }
   .header__cta-container {
     position: absolute;
     width: 50rem;
@@ -387,6 +420,13 @@ body {
     bottom: 8rem;
     color: #ccc;
     text-align: right; }
+    @media (max-width: 37.5em) {
+      .header__cta-container {
+        position: relative;
+        right: 0;
+        bottom: 0;
+        width: auto;
+        text-align: center; } }
 
 .nav {
   position: absolute;
@@ -413,6 +453,9 @@ body {
     padding-left: 1rem; }
   .nav__logo {
     width: 30rem; }
+  @media (max-width: 37.5em) {
+    .nav {
+      display: none; } }
 
 .section-about {
   padding: 15rem 15rem;
