--- a/public/sass/base/_reset.scss
+++ b/public/sass/base/_reset.scss
@@ -1,5 +1,22 @@
 html {
 	font-size: 62.25%;
+
+	@include respond(big-desktop) {
+		font-size: 75%; //12px
+	}
+
+	@include respond(tab-land) {
+		font-size: 56.25% // 9px
+	}
+
+	@include respond(tab-port) {
+		font-size: 50%; //8px
+	}
+
+	@include respond(big-desktop) {
+		font-size: 75%; //12px
+	}
+
 }
 
 body {
