--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -1,7 +1,7 @@
 @import "abstracts/variables";
 @import "abstracts/utilities";
+@import "abstracts/mixins";
 
-@import "base/base";
 @import "base/reset";
 @import "base/typography";
 
