--- a/public/sass/layouts/_header.scss
+++ b/public/sass/layouts/_header.scss
@@ -28,6 +28,7 @@
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
+			align-items: center;
 		}
 	}
 
@@ -42,6 +43,7 @@
 			bottom: 0;
 			text-align: center;
 			margin-bottom: 4rem;
+			max-width: 45rem;
 		}
 	}
 
