--- a/public/sass/pages/_home.scss
+++ b/public/sass/pages/_home.scss
@@ -3,11 +3,18 @@
 	background-color: $color-white;
 	background-image: url(../img/geometry2.png);
 	background-repeat: repeat;
+
+	@include respond(phone) {
+		padding: 8rem 2rem;
+	}
 }
 
 .about {
 	&__container {
 		display: flex;
+		@include respond(phone) {
+			flex-direction: column;
+		}
 	}
 
 	&__texts { 
@@ -17,7 +24,10 @@
 	&__images {
 		flex-basis: 100%;
 		position: relative;
+		padding: 3rem;
+		margin-top: 6rem;
 	}
+
 
 	&__photo {
 		position: absolute;
@@ -27,19 +37,45 @@
 		outline-offset: 2rem;
 		border-radius: 2px;
 
+		@include respond(phone) {
+			float: left;
+			position: relative;
+			width: 33.3333333%;
+			box-shadow: 0 1.5rem 3rem rgba($color-black, .2);
+		}
+
 		&--1 {
 			top: 15%;
 			left: 50%;
+
+			@include respond(phone) {
+				top: 1rem;
+				transform: scale(1.2);
+				left: 0;
+			}
 		}
 
 		&--2 {
 			top: 30%;
 			left: 35%;
+
+			@include respond(phone) {
+				top: -1rem;
+				transform: scale(1.3);
+				z-index: 100;
+				left: 0;
+			}
 		}
 
 		&--3 {
 			top: 45%;
 			left: 20%;
+
+			@include respond(phone) {
+				top: 1rem;
+				left: 0;
+				transform: scale(1.2);
+			}
 		}
 
 		&:hover {
